--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Urgency Banner -->
     <section class="urgency-banner">
         <div class="banner-content">
-            <p>😓 Stressed about money?<br>Apply for an instant personal loan and breathe easy again!</p>
+            <p>😓 Stressed about money?<br>Apply for an instant personal loan and breath easy again!</p>
             <a href="#apply" class="cta-button">Apply Now</a>
         </div>
     </section>
@@ -73,9 +73,9 @@
         
         <div class="contact-info">
             <h3>Contact Us</h3>
-            <a href="tel:0761997011"><i class="fas fa-phone"></i> 076 199 7011</a>
+            <a href="tel:0761997011"><i class="fas fa-phone"></i> +27 76 199 7011</a>
             <a href="mailto:hilarympho@gmail.com"><i class="fas fa-envelope"></i> hilarympho@gmail.com</a>
-            <a href="https://wa.me/2761997011" class="whatsapp-button">
+            <a href="https://wa.me/27761997011" class="whatsapp-button">
                 <i class="fab fa-whatsapp"></i> WhatsApp Us
             </a>
         </div>
@@ -109,7 +109,7 @@
             <div class="footer-section">
                 <h3>Contact Information</h3>
                 <ul class="contact-info">
-                    <li><i class="fas fa-phone"></i> 076 199 7011</li>
+                    <li><i class="fas fa-phone"></i> +27 76 199 7011</li>
                     <li><i class="fas fa-envelope"></i> hilarympho@gmail.com</li>
                     <li class="service-area"><i class="fas fa-map-marker-alt"></i> Serving South African clients only</li>
                 </ul>
